--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ node_modules/
 
 # Environment variables
 .env
-.env.*
+.env.local
+.env.production
+.env.development
 
 # Logs
 logs/
@@ -28,3 +30,4 @@ Thumbs.db
 .idea/
 *.sublime-workspace
 *.sublime-project 
+.vercel
